added working grpc api
